--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                             <span class="bg-[#dcf8c6] text-gray-600 text-xs px-2 py-1 rounded shadow-sm">30/11/2025</span>
                         </div>
                         <div class="self-start max-w-[90%] bg-white rounded-lg rounded-tr-none shadow-sm p-2 relative border border-gray-100">
-                             <!-- Image Updated -->
-                             <img src="msg-pic-1.jpg" alt="חגיגות 6000 חברים" class="w-full h-40 object-cover rounded mb-2 border border-gray-200">
+                             <!-- Image Updated to Auto Height with Max Limit -->
+                             <img src="msg-pic-1.jpg" alt="חגיגות 6000 חברים" class="w-full h-auto max-h-72 object-cover rounded mb-2 border border-gray-200">
                             
                             <p class="text-sm text-gray-800 leading-snug whitespace-pre-wrap"><strong>מזל טוב לקהילת שחקני התפקידים הוותיקה של ישראל בפייסבוק!</strong>
 שחקני תפקידים בישראל הגיעה למס' מרשים של 6000 חברים וחברות.</p>
@@ -329,8 +329,8 @@
                             <span class="bg-[#dcf8c6] text-gray-600 text-xs px-2 py-1 rounded shadow-sm">01/12/2025</span>
                         </div>
                         <div class="self-start max-w-[90%] bg-white rounded-lg rounded-tr-none shadow-sm p-2 relative border border-gray-100">
-                             <!-- Image Updated -->
-                             <img src="msg-pic-2.jpg" alt="תערוכת קוביות הגורל" class="w-full h-40 object-cover rounded mb-2 border border-gray-200">
+                             <!-- Image Updated to Auto Height with Max Limit -->
+                             <img src="msg-pic-2.jpg" alt="תערוכת קוביות הגורל" class="w-full h-auto max-h-72 object-cover rounded mb-2 border border-gray-200">
                             
                             <p class="text-sm text-gray-800 leading-snug whitespace-pre-wrap"><strong>קוביות הגורל - תערוכת אמנות של משחקי תפקידים בתל אביב</strong>
 לפני חצי שנה הוקמה לה חבורה שיצאה להרפתקה, לנסות לדמיין איך אפשר להחיות את הדמיון שלנו אחרי השנתיים האלה, איך עושים מזה משחק ואיך מחברים את הכל לעושר של העולם היהודי. ויצאו פלאים. וזה הופך לתערוכה. תערוכת אמנות של משחקי תפקידים הראשונה בישראל.</p>
